# PoF_Simulator

./: .gitignore  README.md  graph.json  inputParameters.xlsx  main.py  main_no_plots.py  map_utils.py  mobility_utils.py  node_list.mat  parametric_sweep.py  plot_batch.ipynb  plot_parametric.ipynb  plot_results.ipynb  plot_utils.py  polygon_cut.py  pyproject.toml  radio_utils.py  requirements.txt  run_batch.py  run_parametric_with_batch.py  run_simulator.py  run_simulator_technoeconomics.py  sciplot.py  simulator.bat  start_x.py  test.py  test2.py  user_association_utils.py
.run/: Run Simulator.run.xml
mocks/: graph_dump.json  test_1.ipynb  test_cell.ipynb  test_classify_nodes.ipynb  test_distances.ipynb  test_grapher.ipynb  test_grapher.py  test_node_classify.ipynb  test_normalized_positions.ipynb
model/: CellClass.py  FileFormat.py  GraphComplete.py  LinkClass.py  MatFileStorageParser.py  NetworkGraph.py  NetworkGraphPlots.py  NodeClass.py  Plotteable.py  RegionsCalcs.py  RegionsPlotter.py  SpatialHeatMap.py  TechnoEconomics.py  TrafficModel.py  TrafficModelClass.py  UserClass.py
network_plotter/: NameTypes.xlsx  Passion_Xtreme_III.mat  graph.json  graph_dump.json  merged_nodes.json  plot_from_json.py  plot_map.py  plot_mat.py  test_grapher.ipynb  test_grapher.py
rust/: Cargo.toml  howto.md
simulator/: algorithm_base.py  algorithm_eli.py  algorithm_elighthouse.py  algorithm_technoeconomics.py  algorithm_tecno_new.py  algorithm_tecno_new_plots.py  algorithm_uc3m.py  context_config.py  energy_utils.py  launch.py  launch_technoeconomics.py  launch_tecno_new.py  (+8 more)
(+60 files in other folders)
