[tool.poetry]
name = "pof-simulation-python"
version = "1.0"
description = "Power over Fiber (PoF) Polling Simulator"
authors = ["efernandezelig <efernandez@e-lighthouse.com>"]
readme = "README.md"
packages = [
  { include = "simulator" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
contourpy = "1.0.7"
cycler = "0.11.0"
et-xmlfile = "1.1.0"
fonttools = "4.38.0"
kiwisolver = "1.4.4"
matplotlib = "3.7.0"
numpy = "1.24.2"
openpyxl = "3.1.1"
packaging = "23.0"
pandas = "1.5.3"
pillow = "9.4.0"
pyparsing = "3.0.9"
python-dateutil = "2.8.2"
pytz = "2022.7.1"
scipy = "1.10.1"
shapely = "2.0.1"
six = "1.16.0"
tqdm = "4.64.1"
seaborn = "0.12.2"
pyside6 = "6.5.2"
send2trash = "1.8.2"
ipykernel = "^6.29.5"
networkx = "3.4.2"
pydantic = "2.11.1"
osmnx = "2.0.2"
geopandas = "1.0.1"
contextily = "1.6.2"
notebook = "^7.3.3"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"